--- a/assets/style.css
+++ b/assets/style.css
@@ -52,9 +52,11 @@ body.close .content {
 }
 
 #app {
+  display: flex;
+  align-items: center;
+  justify-content:center;
   font-size: 2rem;
-  margin: 40vh auto;
-  text-align: center;
+  height: 100%;
 }
 .progress {
   background-color: var(--theme-color, #42b983);
